--- a/lab_webScraping.ipynb
+++ b/lab_webScraping.ipynb
@@ -20,7 +20,7 @@
         "#Introdução\n",
         "\n",
         "\n",
-        "Este notebook tem como objetivo explorar o uso do framework Agno integrado ao modelo Groq-Llama, combinando três elementos principais:\n",
+        "Esse notebook tem como objetivo explorar o uso do framework Agno integrado ao modelo Groq-Llama, combinando três elementos principais:\n",
         "\n",
         " - Coleta de dados via scrapping\n",
         " - Processamento ou tratamento dos dados coletados\n",
